Fix layout shift when opening a chat when all the rest were closed

--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -1,5 +1,5 @@
 .list {
-  flex: 1;
+  flex: 0 1 25%;
   display: flex;
   flex-direction: column;
   position: relative;
